@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST Thunar-0.9.92.tar.bz2 6647836 RMD160 5b1e14232c16978b7a690069a7c350cdb7002041 SHA1 593abe4d4425fbc8faa6c7257f6f893d7ad92c77 SHA256 bd9930e8a6f3f6d41893e976d163d505a100e00431ed97059067de92cf7dc66f
-EBUILD thunar-0.9.92.ebuild 1735 RMD160 3c9b5b1e32bd20b5c978af787bf76c3592c4929d SHA1 940430d36a01fbe4313f06101ce71136b4754ee9 SHA256 dd8de4ab9e8a10e0fddc77ebd1af7d043ba95ddbf6c946b913bd3e5eb1b95b22
-EBUILD thunar-9999.ebuild 1698 RMD160 93ad7bf1c9bb675e951c5b2f4751a9936a91ef18 SHA1 30be047a3eefa507a246e87e732a84fa3d25892f SHA256 b830ae46976d984bb7aab7214b364cfa90edfc66f4b7f1c00b8eeda66eb27978
-MISC ChangeLog 1072 RMD160 9c16786df57cf50555a5d2f4e9629c783fa3b31c SHA1 85e0199b3637bf0083a62ca8f28e86f6861fe4ae SHA256 72cceb493c4ed40d1f972fbc7ceaf252f91f09c8cc8b79eee58f1cbe061be0a6
+EBUILD thunar-0.9.92.ebuild 1791 RMD160 5669d2c65481bf41a1a205359ef324bec1a4daa3 SHA1 7e44d88a46e3fdd1e522975ab37737297b0ee8d5 SHA256 f886f46abd09f7ec61cd303ae5b2173e60f4bd2c2436c990b5a6fbb4a183a174
+EBUILD thunar-9999.ebuild 1776 RMD160 76784040e207d53cab461f5414b8b0d76e91686f SHA1 18784881f8f73f32767b8790771a29f7307a2357 SHA256 408377aacda833fd41b79e4de1ac2ee37d456e136c639c4f4ce52927a568c1f0
+MISC ChangeLog 1185 RMD160 1ec578d52a5dcf5be2a346cbe633f2955f913b4e SHA1 a3e1c9b5bf779fefb82900cba4368f5deeb4a68a SHA256 77bed9251ed43fc7fb9ecda302f1c8d3b1f4fb8ce818ce2958daf730d05644c7
 MISC metadata.xml 234 RMD160 5cf371faf236f472c7d98a92d7103c5a96c4d95a SHA1 f028da2a6c812a70d5a6c159a450899a5c8f29a2 SHA256 acb3aa4d6a184bbefb0ae06cbb0ed0416ecd1b87d01cae543365cfc0e330d8cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklAEJIACgkQKhnDs22gwa8EqgCfVyT5cI5ZJcqnE6LEtAt2cnG9
-+dAAn1pTI7iET4P+k32vOh4Q7aCYWxuC
-=nWVT
+iEYEARECAAYFAklK3XgACgkQKhnDs22gwa/cswCg0B7GJGMW0EvwW89kAr/kbRdI
++zsAnja5S+JDUkeqPGBI9U8jPuUjnhrl
+=KNas
 -----END PGP SIGNATURE-----
